modules/gdscript/tests/scripts/analyzer/errors/enum_bad_value.gd
enum Enum {V1, V2}

func test():
	var bad = Enum.V3
